# chenwei-tech-docs

./: CONTRIBUTING.md  README.md  _sidebar.md  index.html
.cursor/rules/: doc-heading-numbering.mdc
docs/: README.md
docs/01_基础层/: 1.1_01_动机与缩放取舍.md  1.1_动机与缩放取舍.md  1.1_大模型基础与架构.md  (+4 more)
hermes/: aliyun-claude-config.md
opencode/: codeplan-config-summary.md
scripts/: README.md  apply_doc_format.py  auto-commit.sh  fetch_github_docs.py  gen_sidebar.py  renumber_headings.py
未使用/github文档快照/github文档仓库/AI-LlmEngineerTechStack/1_大模型技术/2_模型部署与推理/硬件适配/mygpu_ops_demo/: README.md  pyproject.toml  setup.py
未使用/github文档快照/github文档仓库/AI-LlmEngineerTechStack/1_大模型技术/2_模型部署与推理/硬件适配/mygpu_ops_demo/csrc/: mygpu_ops.cpp
未使用/github文档快照/github文档仓库/AI-LlmEngineerTechStack/1_大模型技术/2_模型部署与推理/硬件适配/mygpu_ops_demo/csrc/include/: common.h
未使用/github文档快照/github文档仓库/AI-LlmEngineerTechStack/1_大模型技术/2_模型部署与推理/硬件适配/mygpu_ops_demo/csrc/ops/: attention.cpp  rms_norm.cpp  rotary_embedding.cpp
未使用/github文档快照/github文档仓库/AI-LlmEngineerTechStack/1_大模型技术/2_模型部署与推理/硬件适配/mygpu_ops_demo/examples/: benchmark.py  integration_demo.py  test_ops.py
未使用/github文档快照/github文档仓库/AI-LlmEngineerTechStack/1_大模型技术/2_模型部署与推理/硬件适配/mygpu_ops_demo/mygpu_ops/: __init__.py  core.py
未使用/github文档快照/github文档仓库/AI-LlmEngineerTechStack/1_大模型技术/2_模型部署与推理/硬件适配/mygpu_ops_demo/mygpu_ops/kernels/: __init__.py  attention.py  layernorm.py  rotary.py
未使用/github文档快照/github文档仓库/AI-LlmEngineerTechStack/1_大模型技术/2_模型部署与推理/硬件适配/mygpu_ops_demo/vllm_plugin/: __init__.py  register.py
未使用/github文档快照/github文档仓库/AI-LlmEngineerTechStack/1_大模型技术/2_模型部署与推理/硬件适配/mygpu_ops_demo/vllm_plugin/ops/: __init__.py  attention.py  base.py  rms_norm.py  rotary_embedding.py
(+127 files in other folders)
